--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@
 !Optimal_portfolio_analysis.py
 !Optimal_Portfolio_Analysis.ipynb
 !OOS_testing.py
+!mean_variance_optimal_portfolio.py
 !.gitignore
 
