--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,7 @@ dependencies:
   - pandas>=2.2
   - scipy>=1.11
   - matplotlib>=3.8
+  - matplotlib-inline>=0.1
   - seaborn>=0.13
   - statsmodels>=0.14
   - scikit-learn>=1.4
